<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkColor"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/form_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="?attr/homeAsUpIndicator"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/gads"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkColor"
            android:elevation="5dp"
            android:padding="5dp"
            android:text="@string/form_title"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Project Submission" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="24dp"
            android:autoSizeTextType="uniform"
            android:background="@android:color/white"
            android:hint="@string/first_name_placeholder"
            android:padding="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/white"
            android:hint="@string/last_name_placeholder"
            android:padding="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/first_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:background="@android:color/white"
            android:hint="@string/project_link_placeholder"
            android:padding="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/white"
            android:gravity="start"
            android:hint="@string/email_address_placeholder"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name" />

        <Button
            android:layout_width="162dp"
            android:layout_height="53dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="#FF9800"
            android:onClick="confirmSubmission"
            android:padding="4dp"
            android:text="@string/projectSubmitBtn"
            android:textColor="#DFDEDE"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/link" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>